--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
